--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,26 @@
-VITE_APP_ID=proj_abc123def456
-VITE_OAUTH_PORTAL_URL=https://vida.butterfly-effect.dev
-VITE_APP_TITLE="Todo App"
-VITE_APP_LOGO="https://placehold.co/40x40/3b82f6/ffffff?text=T"
+# Database
+DATABASE_URL=mysql://user:pass@host:port/database
+
+# Authentication (Manus OAuth)
+JWT_SECRET=your-jwt-secret-change-in-production
+OAUTH_SERVER_URL=https://api.manus.im
+VITE_OAUTH_PORTAL_URL=https://login.manus.im
+VITE_APP_ID=your-app-id
+OWNER_OPEN_ID=your-owner-openid
+OWNER_NAME=your-name
+
+# Branding
+VITE_APP_TITLE="AI Insights Hub"
+VITE_APP_LOGO="https://your-logo-url.com/logo.png"
+
+# AI & APIs (Required for article categorization and summarization)
+BUILT_IN_FORGE_API_URL=https://api.manus.im
+BUILT_IN_FORGE_API_KEY=your-api-key
+
+# Optional: Analytics
 VITE_ANALYTICS_ENDPOINT=https://umami.dev.ops.butterfly-effect.dev
 VITE_ANALYTICS_WEBSITE_ID=analytics_proj_abc123def456
-OAUTH_SERVER_URL=https://vidabiz.butterfly-effect.dev
-DATABASE_URL=mysql://example-user:example-password@localhost:3306/main
-JWT_SECRET=your-jwt-secret-change-in-production
-OPENAI_API_URL=
-OPENAI_API_KEY=your-openai-api-key
+
 # Infrastructure (server-only)
 PORT=3000
+NODE_ENV=production
